# Project-BSE

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  ignorelist.txt  vcpkg.json
.github/workflows/: cmake.yml
application/: NifLoader.cpp  NifLoader.hpp  TGApp.cpp  TGApp.hpp  TGAppDef.cpp  TGAppLauncher.cpp
application/assets/: NifLoader.cpp  Whiterun.bsa  dwerubblecolumn02.nif  terrain.frag  terrain.vert  terrainLib.glsl  testNif.frag  testNif.vert  tool.frag  tool.vert  transform.glb  translategizmo.nif  wrdragoncarvings01.dds  wrhouse02.nif  wrslate01_n.dds  wrtrims01_n.dds  wrwindows01.dds  wrwindows01_em.dds  wrwoodbeam01_n.dds  wrwoodlattice01.dds  wrwoodlattice01_g.dds  wrwoodlattice01_n.dds  wrwoodplanks01_n.dds  wrwoodplaster01.dds  wrwoodplaster01_n.dds
application/assets/textures/: bsdevorange.dds
application/assets/textures/architecture/whiterun/: wrdragoncarvings01_n.dds  wrdragontile01_n.dds  wrslate01.dds  wrtrims01.dds  wrwindows01_g.dds  wrwindows01_n.dds  wrwoodbeam01.dds  wrwoodplanks01.dds
application/module/: GizmoLibrary.hpp  Gizmos.cpp  Gizmos.hpp  NifLoader.cpp  NifLoader.hpp  TGAppGUI.hpp  TGAppIO.cpp  TGAppIO.hpp  TerrainModule.cpp  TerrainModule.hpp
application/test/: TGTest.cpp
interop/: InternalInterop.cpp  InternalInterop.hpp  Interop.cpp  Interop.hpp  SETextureset.hpp
